# MercadoClubesPro

./: README.md  iv.yaml  pyproject.toml
docs/: HUs.md  eleccion_lenguaje.md  task-runner.md  usuarios.md
mercadoclubespro/: equipo.py  plataforma.py
src/: equipo.py  estilo_de_juego_defensivo.py  estilo_de_juego_ofensivo.py  formacion.py  plataforma.py
test/: tests.py
